--- a/grafana-datasources.yaml
+++ b/grafana-datasources.yaml
@@ -7,3 +7,9 @@ datasources:
     access: proxy
     basicAuth: false
     withCredentials: false
+  - name: Loki
+    type: loki
+    url: http://loki:3100
+    access: proxy
+    basicAuth: false
+    withCredentials: false
