--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "@opentelemetry/auto-instrumentations-node": "^0.48.0",
     "@opentelemetry/exporter-trace-otlp-proto": "^0.52.1",
     "@opentelemetry/sdk-node": "^0.52.1",
-    "express": "^4.19.2"
+    "express": "^4.19.2",
+    "winston": "^3.13.1",
+    "winston-loki": "^6.1.2"
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
