fix: config file & add minio storage

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -41,6 +41,6 @@ services:
     networks:
       - telemetry-monitoring
     volumes:
-      - ./loki.yaml:/etc/loki/loki-config.yaml:ro
+      - ./loki.yaml:/etc/loki/local-config.yaml:ro
     ports:
       - 3100:3100
